fix: 修复了命令执行不了，脚本执行器链式调用解析和IO/Socket性能过低的问题