@@ -1,7 +1,10 @@
 package com.justnothing.testmodule.command.functions.performance.sampler;
 
+import com.justnothing.testmodule.utils.concurrent.ThreadPoolManager;
+
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class MultiThreadSampler {
@@ -9,7 +12,7 @@ public class MultiThreadSampler {
     private final Map<String, Map<String, AtomicInteger>> threadMethodCounts = new ConcurrentHashMap<>();
     private final Map<String, AtomicInteger> totalSamplesPerThread = new ConcurrentHashMap<>();
     private final AtomicInteger totalSamples = new AtomicInteger(0);
-    private Thread samplerThread;
+    private Future<?> samplerFuture;
     private final int sampleRate;
     private long startTime;
     private long stopTime;
@@ -27,7 +30,7 @@ public class MultiThreadSampler {
         startTime = System.currentTimeMillis();
         long intervalMs = 1000 / sampleRate;
 
-        samplerThread = new Thread(() -> {
+        samplerFuture = ThreadPoolManager.submitFastRunnable(() -> {
             while (running) {
                 sample();
                 try {
@@ -37,9 +40,6 @@ public class MultiThreadSampler {
                 }
             }
         });
-        samplerThread.setName("MultiThreadPerformanceSampler");
-        samplerThread.setDaemon(true);
-        samplerThread.start();
     }
 
     private void sample() {
@@ -49,7 +49,7 @@ public class MultiThreadSampler {
             Thread thread = entry.getKey();
             StackTraceElement[] stackTrace = entry.getValue();
             
-            if (thread.getName().equals("MultiThreadPerformanceSampler")) {
+            if (thread.getName().contains("Fast-Pool")) {
                 continue;
             }
             
@@ -57,7 +57,7 @@ public class MultiThreadSampler {
                 continue;
             }
             
-            String threadKey = thread.getName() + " (ID: " + thread.getId() + ")";
+            String threadKey = thread.getName() + " (ID: " + thread.threadId() + ")";
             
             Map<String, AtomicInteger> methodCounts = threadMethodCounts.computeIfAbsent(
                 threadKey, k -> new ConcurrentHashMap<>());
@@ -76,8 +76,8 @@ public class MultiThreadSampler {
     public void stop() {
         running = false;
         stopTime = System.currentTimeMillis();
-        if (samplerThread != null) {
-            samplerThread.interrupt();
+        if (samplerFuture != null) {
+            samplerFuture.cancel(true);
         }
     }
 
